# industrialRobot_task_planning

./: .gitignore  README.md
src/configuration_files/and_or/files/: pallet_assembly.txt
src/configuration_files/sequential_planner/files/: Action_Definition_List.txt  State_Action_List.txt
src/my_ur_gazebo/: CMakeLists.txt  package.xml
src/my_ur_gazebo/description/: arm_extras_ur10.urdf.xacro  rg2.urdf.xacro  ur10_robot_rg2_arc.urdf.xacro
src/my_ur_gazebo/launch/: my_ur.launch
src/my_ur_gazebo/models/pallet_single/: model.config  model.sdf
src/my_ur_gazebo/models/part/: model.config  model.sdf
src/my_ur_gazebo/models/test_table/: model.config  model.sdf
src/my_ur_gazebo/worlds/: animate.world  omron.world  robot_hok.world  robot_test.world  robotw_omron.world
src/ur10_rg6_ros/ur10_rg6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur10_rg6_ros/ur_control/: CMakeLists.txt  package.xml
src/ur10_rg6_ros/ur_control/launch/: ur10_control.launch
src/ur10_rg6_ros/ur_control/scripts/: object_pose.py  rg6_detect_client.py  rg6_width_client.py
src/ur10_rg6_ros/ur_control/srv/: RG6.srv  RG6_Grip.srv
src/ur10_rg6_ros/ur_modern_driver/: CMakeLists.txt
src/ur10_rg6_ros/ur_scripts/: client-server.py  db (copy).txt  db.txt  gui_human.py  human_UX.py  human_interface.py  human_interface_test.py  icon.xbm  icon_goal.xbm  pickplace1.py  robot_interface (copy).py  robot_interface.py  robot_timing  start-position.py  test_move.py  test_move2.py  ur_gripper.py  ur_listener.py  ur_talker.py  vision_timing
(+35 files in other folders)
